src/objects/DRDW_Budget_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Quarter_Duplication_TF__c</fullName>
        <label>Quarter Duplication TF</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Business_Plan__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Business Plan</description>
        <label>Business Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DRDW_Budget_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>DRDW Budget Master</description>
        <label>DRDW Budget Master</label>
        <referenceTo>DRDW_Budget_Master__c</referenceTo>
        <relationshipLabel>DRDW Budget Summaries</relationshipLabel>
        <relationshipName>DRDW_Budget_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>F_X_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>F&quot;X&quot; Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DRDW_Budget_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Actual__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q Actual (w/o Accrual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Actual_vs_Rolling_Forecast__c</fullName>
        <formula>Q_Total_Actuals__c -  Rolling_Forecast__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q Actual vs. Rolling Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Actual_w_o_Accrual__c</fullName>
        <label>Q Actual (w/o Accrual)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Buy_Up__c</fullName>
        <description>Q Buy-Up</description>
        <label>Q Buy-Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Done__c</fullName>
        <formula>Q_Actual__c  /  Q_Locked_In_Forecast_Updated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q % Done</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Q_Locked_In_Forecast_Updated__c</fullName>
        <label>Q Locked-In Forecast (Updated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Locked_In_Forecast__c</fullName>
        <label>Q Locked-In Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Priority_of_Invoice__c</fullName>
        <label>Q Priority of Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Med</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Rolling_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q Rolling Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Q_Total_Actuals__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Q Total Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rolling_Forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Rolling Forecast</description>
        <label>Rolling Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Species</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <defaultValue>TEXT(YEAR(TODAY()))</defaultValue>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DRDW Budget Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Summary-{0000}</displayFormat>
        <label>DRDW Budget Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DRDW Budget Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>